--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Artists</h1>
+<% artists = sort_artist_name(@artists) %>
 <ul>
-  <% @artists.each do |artist| %>
+  <% artists.each do |artist| %>
     <li><%= link_to artist.name, artist_songs_path(artist) %></li>
   <% end %>
 </ul>
