--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,8 @@
+
+<% songs = sort_song_name(@songs) %>
 <ul>
-<% @songs.each do |song| %>
-  <li><%= display_artist(song) %> - <%= link_to song.title, song_path(song) %></li>
+<% songs.each do |song| %>
+  <li><%= link_to song.title, song_path(song) %> - <%= display_artist(song) %></li>
 <% end %>
 </ul>
 <br>
